cambio de prompt

--- a/app/templates/partidas/lista.html
+++ b/app/templates/partidas/lista.html
@@ -32,6 +32,7 @@
                                 <div class="editable-partida" data-partida-id="{{ partida.partida_id }}">
                                     <div class="d-flex align-items-center">
                                         <span class="partida-text flex-grow-1">{{ partida.descripcion }}</span>
+                                        <!-- Debug: {{ partida|pprint }} -->
                                         <button type="button" class="btn btn-sm btn-outline-primary edit-btn ms-2" title="Editar nombre">
                                             <i class="fas fa-edit"></i>
                                         </button>
